--- a/changelog.txt
+++ b/changelog.txt
@@ -4,3 +4,4 @@ v1.0
 - forked from xdecor mod @ Git commit 8acc028 ( https://github.com/minetest-mods/xdecor/tree/8acc028 )
 - removed everything not relating to workbench
 - changed textures license to CC0
+- renamed mod to "workbench"
