--- a/changelog.txt
+++ b/changelog.txt
@@ -5,3 +5,4 @@ v1.0
 - removed everything not relating to workbench
 - changed textures license to CC0
 - renamed mod to "workbench"
+- don't load if xdecor available & create aliases for compatibility
